scraper/tests/trybuild/default_no_runtime_event.stderr
error[E0308]: mismatched types
  --> tests/trybuild/default_no_runtime_event.rs:10:52
   |
10 |         nv_redfish_scraper::RuntimeOutput::Runtime(());
   |         ------------------------------------------ ^^ expected `Infallible`, found `()`
   |         |
   |         arguments to this enum variant are incorrect
   |
help: the type constructed contains `()` due to the type of the argument passed
  --> tests/trybuild/default_no_runtime_event.rs:10:9
   |
10 |         nv_redfish_scraper::RuntimeOutput::Runtime(());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^--^
   |                                                    |
   |                                                    this argument influences the type of `Runtime`
note: tuple variant defined here
  --> src/output.rs
   |
   |     Runtime(R),
   |     ^^^^^^^
